--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
         <section class="main-section">
             <h2>
                 Welcome to My Floral Shop!
-            </h2>
-            <li class = "flower">
+            </h2> 
+            <a href="./flowers">Flowers</a>
+            <ul id="flowers"></ul>
+            <!---
+            <li class = "flower" id = "flower">
                 <h3 class = "flower-name">Rose</h3>
                 <img class = "flower-image" src = "https://images.unsplash.com/photo-1559563362-c667ba5f5480?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1290&q=80">
                 <p class = "price">Price: </p>
                 <p class = "amount">Amount: </p>
                 <button id = "button">Add</button>
-            </li>
+            </li> -->
         </section>
     </main>
     <footer>
