--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <section class="main-section">
+        <section class="mainSection">
             <h2>
                 Welcome to My Floral Shop!
             </h2> 
