--- a/flowers/index.html
+++ b/flowers/index.html
@@ -12,19 +12,17 @@
     <title>Floral Shop</title>
 </head>
 <body>
-    <main>
-        <section class="main-section">
+    <main class="main-section" id="flowers-section">
             <h2>
                 Welcome to My Floral Shop!
             </h2> 
-            <li class = "flower" id = "flower">
+            <!-- <li class = "flower" id = "flower">
                 <h3 class = "flower-name">Rose:</h3> </li> 
                 <img class = "flower-image" src = "https://images.unsplash.com/photo-1559563362-c667ba5f5480?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1290&q=80"/>
-                <p class = "price">Price: </p> 
+                <p class = "price">Price: $ </p> 
                 <p class = "amount">Amount: </p>
                 <button id = "button">Add</button> 
-            </li> 
-        </section>
+            </li> -->
         </main>
         <script type="module" src="./flowers.js"></script>
 </body>
