--- a/flowers/index.html
+++ b/flowers/index.html
@@ -14,8 +14,11 @@
 <body>
     <main class="main-section" id="flowers-section">
             <h2>
-                Welcome to My Floral Shop!
-            </h2> 
+                Flowers!
+            </h2>
+            <a href="../">Flowers</a>
+            <ul id="flowers"></ul>
+            
             <!-- <li class = "flower" id = "flower">
                 <h3 class = "flower-name">Rose:</h3> </li> 
                 <img class = "flower-image" src = "https://images.unsplash.com/photo-1559563362-c667ba5f5480?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1290&q=80"/>
