--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 Welcome to My Floral Shop!
             </h2> 
             <a href="./flowers">Flowers</a>
+            <a href="./cart">Cart</a>
             <!---
             <li class = "flower" id = "flower">
                 <h3 class = "flower-name">Rose</h3>
