Lots of Edits, 2/3 tests fixed

--- a/index.html
+++ b/index.html
@@ -43,3 +43,9 @@
 </body>
 
 </html>
+ <!-- So open up your settings file here:
+Windows %APPDATA%\Code\User\settings.json
+    macOS $HOME/Library/Application Support/Code/User/settings.json
+    Linux $HOME/.config/Code/User/settings.json
+and then add "javascript.preferences.importModuleSpecifierEnding": "js",
+"javascript.preferences.quoteStyle": "single" -->
