--- a/cart/index.html
+++ b/cart/index.html
@@ -20,14 +20,14 @@
         <tfoot>
         <tr>
         <td colspan="4">
-        <div>
+        <div id = "total">
             Total: 
         </div>
         </td>
         </tr>
         </tfoot>
         <tbody>
-        <tr>
+       <!-- <tr>
         <td>Rose</td>
         <td>14</td>
         <td>1</td>
@@ -56,10 +56,11 @@
         <td>5</td>
         <td>1</td>
         <td>5</td>
-        </tr>
+        </tr> -->
         </tbody>
         </table>
 
         <button id="check-out">Check out</button>
+        <script type="module" src="./cart.js"></script>
 </body>
 </html>
