--- a/cart/index.html
+++ b/cart/index.html
@@ -60,7 +60,8 @@
         </tbody>
         </table>
 
-        <button id="check-out">Check out</button>
+        <button id="button">Check out</button>
         <script type="module" src="./cart.js"></script>
+        
 </body>
 </html>
